# coEncoder

./: CMakeLists.txt  CODEOWNERS  README.md  package.xml
include/: encoder.hpp
launch/: coencoder.launch
src/: coencoder.cpp
